@@ -91,6 +91,12 @@ and <b>abort</b> execution and transaction and fail task.</p>
   <td align="center">No - defaults to default JVM encoding</td>
 </tr>
 <tr>
+  <td valign="top">outputencoding</td>
+  <td valign="top">The encoding of the files holding
+    results.  <em>since 1.9.4</em</td>
+  <td align="center">No - defaults to default JVM encoding</td>
+</tr>
+<tr>
   <td width="12%" valign="top">delimiter</td>
   <td width="78%" valign="top">String that separates SQL statements</td>
   <td width="10%" valign="top">No, default &quot;;&quot;</td>
